--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 # Only for docker and heroku
 
-BOT_TOKEN=12345:abcaskhdkqlwjgbdklajwbdliw
-SUDOERS=1243703097 1351353543
-NSFW_LOG_CHANNEL=-1001470187101
-SPAM_LOG_CHANNEL=-1001554591017
-ARQ_API_KEY=A54D655S4D654654D # Get it from @ARQRobot
+BOT_TOKEN=7955007597:AAGWneTp9e-l4iXE0Zxvh2-4-OFgjdUbi9s
+SUDOERS=6375272628
+NSFW_LOG_CHANNEL=-1002107679944
+SPAM_LOG_CHANNEL=-1002107679944
+ARQ_API_KEY=IKIQKD-JTNSIW-VPZJSR-ZKVOGR-ARQ # Get it from @ARQRobot
